# GTKSystemd

./: .buildconfig  README.md  meson.build  org.gustavoperedo.GTKSytemd.json  org.gustavoperedo.GTKSytemd.json~
data/: meson.build  org.gustavoperedo.GTKSytemd.appdata.xml.in  org.gustavoperedo.GTKSytemd.desktop.in  org.gustavoperedo.GTKSytemd.gschema.xml
po/: POTFILES  meson.build
src/: gtksystemd.gresource.xml  gtksystemd.in  main.py  meson.build  window.py  window.ui  window.ui~
